style.css
* {
    box-sizing: border-box;
}

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

body {
    font-family: "Roboto", sans-serif;
    margin: 0;
}

header, footer {
    background-color: #1F2937;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin: 0;
}

#hero-section {
    background-color: #1F2937;
}

.subtext, .nav-link {
    font-size: 18px;
    color: #E5E7EB;
}

#logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 900;
}

.hero-button {
    color: #3882F6;
    background-color: transparent;
    font-size: 18px;
    padding: 18px;
    border: 2px solid #3882F6;
    border-radius: 10px;
    cursor: pointer;
}

.cta-container {
    background-color: #3882F6;
}

blockquote {
    background-color: #E5E7EB;
    color: #1F2937;
    font-weight: 100;
    font-style: italic;
    font-size: 36px;
}

header {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 24px;
}

nav > ul {
    list-style: none;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    padding: 0;
    margin: 0;
}

.nav-link {
    text-decoration: none;
}

#hero-section {
    padding: 50px;
    display: flex;
    justify-content: space-around;
}

.left {
    flex: 0 0 600px;
}

.picture-container {
    width: 480px;
    height: 240px;
    padding: 10px;
    background-color: #414141;
    display: flex;
    justify-content: center;
    align-items: center;
}

